@@ -35,6 +35,10 @@ inist \- permet de gérer le proxy INIST dans les applications linux courantes
     github  <on|https|off|ssh|help|status>
             Paramètre github pour utiliser ssh ou https au travers du proxy 
             INIST. Peut aussi s'utiliser avec "https" (on) et "ssh" (off).
+
+    gource  <"URL_du_dépôt_GIT" "nom_du_sprint" "date_début" "date_fin"|help>
+            Produit une animation Gource à partir du dépôt git donné en
+            argument.
             
     npm     <on|off|help|status>
             Paramètre npm pour le proxy INIST.
